--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,4 @@
-MYSQL_HOST=
-MYSQL_USERNAME=
-MYSQL_PASSWORD=
-MYSQL_DATABASE=
-MYSQL_TEST_DATABASE=
-
+MONGODB_COLLECTION=nodeappdb
 JWT_SECRET=
 
 PORT=3456
