--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.4",
     "dotenv": "^4.0.0",
     "express": "^4.15.4",
+    "jsonwebtoken": "^8.2.0",
     "mongodb": "^2.2.31",
     "mongoose": "^4.11.12"
   },
